fixed messages spacing and added post message component to message feed

--- a/src/react/components/Messages.css
+++ b/src/react/components/Messages.css
@@ -39,9 +39,12 @@
   }
   .wrapper{
       background-color: #3f51b5;
+      height: fit-content;
       width: fit-content;
       margin: 0 auto;
+      margin-top: 50px;
       padding-top: 20px;
+      
   }
 
 .likes {
